TASK-6 FIX Deploy to Netlify

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,7 @@
         />
         <title>Мои финансы</title>
         <style>
-            @import './public/critical.css';
-            @import './src/constants/colors.css';
+            @import 'critical.css';
         </style>
     </head>
     <body>
